# PrimeMemoryDumping

./: CMakeLists.txt  README.md
common/: GameMemory.h  MemoryBuffer.cpp  MemoryBuffer.hpp  game_value.h
prime1/: CAABB.hpp  CAABBPrimitive.hpp  CFirstPersonCamera.hpp  CGameAllocator.h  CGameAllocator.hpp  CGameArea.hpp  CGameGlobalObjects.hpp  CGameState.hpp  CHealthInfo.hpp  CMatrix4f.hpp  CObjectList.hpp  CObjectReference.hpp  CPair.hpp  CPlayerState.hpp  CQuaternion.hpp  CRBTree.hpp  CRandom16.hpp  CReservedVector.hpp  CSimplePool.hpp  CStateManager.hpp  CTransform.hpp  CVector.hpp  CVector3f.hpp  CWorld.hpp  Prime1ConsoleDumper.cpp  Prime1ConsoleDumper.hpp  Prime1JsonDumper.cpp  Prime1JsonDumper.h  Prime1JsonDumper.hpp  SObjectTag.hpp
prime1/actors/: CActor.h  CEntity.h  CEntity.hpp  CGameCamera.hpp  CMorphBall.hpp  CPhysicsActor.h  CPlayer.h  CPlayer.hpp  CPlayerGun.hpp
prime1/rstl/: rstl.hpp  rstl_string.hpp
